# code-examples

./: .gitignore  README.md
ahk/ahk-recipes-examples/: 002-expand-variable.ahk  (+6 more)
python/index-based-constrained-selection/: .gitignore  README.md  pyproject.toml
python/index-based-constrained-selection/src/: __init__.py
python/index-based-constrained-selection/src/01_deterministic_quoting/: __init__.py  demo.py  right_way.py  sample_essay.txt  wrong_way.py
python/index-based-constrained-selection/src/02_web_automation/: __init__.py  demo.py  mock_page.py  right_way.py  wrong_way.py
python/index-based-constrained-selection/src/03_text_to_sql/: __init__.py  demo.py  right_way.py  schema.py  wrong_way.py
python/index-based-constrained-selection/src/04_config_selection/: __init__.py  config_models.py  demo.py  right_way.py  wrong_way.py
python/index-based-constrained-selection/src/05_langgraph_integration/: __init__.py  workflow.py
python/index-based-constrained-selection/src/common/: __init__.py  models.py  registry.py
python/index-based-constrained-selection/tests/: __init__.py  test_registry.py
python/langchain-inference-masking/: .env.example  .gitignore  README.md  pyproject.toml
python/langchain-inference-masking/src/: app.py  validate_implementation.py  validate_middleware.py
python/langchain-inference-masking/src/agents/: __init__.py  simple_agent.py  verification_agent.py
python/langchain-inference-masking/src/config/: config-example.yml  config_loader.py
python/langchain-inference-masking/src/middleware/: __init__.py  pii_masking.py
python/langchain-inference-masking/src/services/: __init__.py  pii_registry.py  verification_service.py
(+82 files in other folders)
