[tool.poetry]
name = "index-based-constrained-selection"
version = "0.1.0"
description = "Examples demonstrating index-based constrained selection pattern for LLM safety"
authors = ["John Sosoka <john@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^1.0.0"
langchain-openai = "^1.0.0"
langgraph = "^1.0.0"
stanza = "^1.8.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.11"
strict = true
